# indonesia-tourism-recsys

./: .env  .env.example  .gitignore  Dockerfile  README.md  create_bucket.py  docker-compose-api.yml  docker-compose-base.yml  docker-compose-monitoring.yml  pyproject.toml  run_create_bucket.sh  team13_indonesiatourismdestination_deploycamp.py
app/: Dockerfile  main.py
app/api/: api_router.py
app/api/endpoints/: destinations.py  statistics.py
app/api/routes/: destinations.py  health.py
app/core/: client.py  config.py  database.py
app/ml/: best_model.pkl  feature_names.pkl  label_encoders.pkl  model.pkl  model_metadata.json  scaler.pkl
app/models/: destination.py
app/schemas/: destination.py  statistic.py
app/services/: destinations_service.py
app/utils/: data_loader.py
backend/: Dockerfile
backend/app/api/: api_router.py
backend/app/api/endpoints/: health.py
backend/app/ml/: feature_names.json
backend/app/services/: destination_service.py  statistic_service.py
infra/: bashrc_generate.sh
monitoring/prometheus/: prometheus.yml
