[project]
name = "recsys-tourism-backend"
version = "0.1.0"
description = "Capstone Project DeployCamp - Group 13"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "joblib>=1.5.1",
    "minio>=7.2.16",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.4",
]
